design patterns payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,42 @@
-spring.application.name=payment
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=8081
+spring.application.name=payment-service
+
+jwt.secret=THIS_IS_A_32+_CHAR_SECRET_KEY_FOR_HS256!!
+
+# Azure SQL Database connection
+spring.datasource.url=jdbc:sqlserver://myapp-sql-dev-dun4igrgsr6wu.database.windows.net:1433;database=appdb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=sqladminuser
+spring.datasource.password=SpringBoot#Dev_2026!
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# ===============================
+# LOGGING CONFIG
+# ===============================
+logging.level.root=INFO
+logging.level.com.example.payment=DEBUG
+
+# ===============================
+# RESILIENCE4J CIRCUIT BREAKER
+# ===============================
+
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.paymentServiceCircuit.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+# ===============================
+# ACTUATOR (Optional but recommended)
+# ===============================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
