--- a/src/main/resources/application.dev.properties
+++ b/src/main/resources/application.dev.properties
@@ -1,7 +1,7 @@
 # ===============================
 # SERVER
 # ===============================
-server.port=8081
+server.port=${PORT:8080}
 spring.application.name=payment-service
 
 # ===============================
